--- a/Shared.css
+++ b/Shared.css
@@ -57,6 +57,9 @@ background: var(--main-dark-color);
 right: initial;
     margin-left: 17px;
 }
+.private-channels .channel:hover {
+background: var(--main-dark-color) !important;
+}
 .friends-table {
 background: none !important;
 }
