--- a/Shared.css
+++ b/Shared.css
@@ -8,6 +8,11 @@
 display: inline-flex;
 padding-right: 15px;
 }
+.emoji-picker .scroller .emoji-item {
+   background-position: 50% !important;
+    background-repeat: no-repeat !important;
+    background-size: contain !important; 
+}
 .guilds .guild.selected:nth-child(even):before, .guilds-wrapper .guilds .guild.unread:nth-child(even):before {
 width: 5px !important;
 left: -10px !important;
