Fixed invite background color.

--- a/Shared.css
+++ b/Shared.css
@@ -157,3 +157,7 @@ border-bottom: 1px solid var(--main-dark-color);
 #voice-connection .btn-disconnect {
     box-shadow: inset 1px 0 0 var(--main-center-color) !important;
 }
+.invite-button {
+    background: var(--main-center-color) !important;
+    border-color: var(--main-dark-color);
+}
